<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/detailsMenu_item_done"
        android:title="@string/detailsMenu_string_done"
        android:icon="@drawable/ic_done_white"
        app:showAsAction="ifRoom"
        tools:ignore="AlwaysShowAction"
        android:contentDescription="Done action item"/>

    <item android:id="@+id/detailsMenu_item_edit"
        android:title="@string/detailsMenu_string_edit"
        android:icon="@drawable/ic_edit_white"
        app:showAsAction="ifRoom"
        android:contentDescription="Edit action item"
        />

    <item android:id="@+id/detailsMenu_item_delete"
        android:title="@string/detailsMenu_string_delete"
        android:icon="@drawable/ic_delete_white"
        app:showAsAction="ifRoom"
        android:contentDescription="Delete action item"
        />


</menu>