<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/detailsAct_appBarLayout_appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_194sdp"
        android:theme="@style/Theme.MaterialComponents.NoActionBar"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/detailsAct_collapsingToolbarLayout_collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/green_2"
            app:layout_scrollFlags="noScroll">

            <ImageView
                android:id="@+id/detailsAct_iv_toolbarImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:background="@color/green_2"
                android:scaleType="centerCrop"
                app:layout_collapseMode="pin"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detailsAct_tb_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/details_nestedScrollView_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_4sdp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                android:hint="@string/detailsAct_et_plantName"
                app:helperTextEnabled="true"
                app:helperText="@string/detailsAct_plantName_helperText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/detailsAct_textInputEditText_plantName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_4sdp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                android:hint="@string/detailsAct_et_plantLocation"
                app:helperTextEnabled="true"
                app:helperText="@string/detailsAct_plantLocation_helperText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/detailsAct_textInputEditText_plantLocation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_4sdp"
                app:counterEnabled="true"
                app:counterMaxLength="250"
                android:hint="@string/detailsAct_et_plantDescription"
                app:helperTextEnabled="true"
                app:helperText="@string/detailsAct_plantDescription_helperText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/detailsAct_textInputEditText_plantDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:gravity="top"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/detailsAct_materialButton_loadImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                app:icon="@drawable/ic_image_white"
                app:iconGravity="textStart"
                app:strokeColor = "@color/green_mbutton_stroke_enabled"
                app:strokeWidth="2dp"
                android:layout_margin="@dimen/_4sdp"
                android:text="@string/detailsAct_materialButton_loadImage"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/detailsAct_materialButton_deleteImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                app:icon="@drawable/ic_delete_white"
                app:iconGravity="textStart"
                app:strokeColor = "@color/green_mbutton_stroke_enabled"
                app:strokeWidth="2dp"
                android:layout_margin="@dimen/_4sdp"
                android:text="@string/detailsAct_materialButton_deleteImage"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>